syntax = "proto3";
option go_package="../relationservice";

package relationservice;

message DouYinRelationActionRequest {
  string token = 1;
  int64 to_user_id = 2;
  int32 action_type = 3; // 1-Follow, 2-Unfollow
}

message DouYinRelationActionResponse {
  int32 status_code = 1;
  string status_msg = 2;
}

message DouYinRelationFollowListRequest { //follow list
  int64 user_id = 1;
  string token = 2;
}

message DouYinRelationFollowListResponse {
  int32 status_code = 1;
  string status_msg = 2;
  repeated User user_list = 3; // User information list
}

message DouYinRelationFollowerListRequest { //fan list
  int64 user_id = 1;
  string token = 2;
}

message DouYinRelationFollowerListResponse {
  int32 status_code = 1;
  string status_msg = 2;
  repeated User user_list = 3;
}

message DouYinRelationFriendListRequest {
  int64 user_id = 1;
  string token = 2;
}

message DouYinRelationFriendListResponse {
  int32 status_code = 1;
  string status_msg = 2;
  repeated FriendUser user_list = 3;
}

message FriendUser {
  message User {
    User user = 1;
  }
  string message = 2; // latest chat messages with this friend
  int64 msgType = 3; // message type，0 - Messages currently requested by the user，1 - Messages sent by the current requesting user
}

message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称  
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注,false-未关注
  string avatar = 6; //用户头像
  string background_image = 7; //用户个人页顶部大图
  string signature = 8; //个人简介
  int64 total_favorited = 9; //获赞数量
  int64 work_count = 10; //作品数量
  int64 favorite_count = 11; //点赞数量
}

service RelationActionService {
  rpc RelationAction(DouYinRelationActionRequest) returns(DouYinRelationActionResponse);
}

service RelationFollowListService {
  rpc RelationFollowList(DouYinRelationFollowListRequest) returns(DouYinRelationFollowListResponse);
}

service RelationFollowerList {
  rpc RelationFollowerList(DouYinRelationFollowListRequest) returns(DouYinRelationFollowListResponse);
}

service RelationFriendListService {
  rpc RelationFriendList(DouYinRelationFriendListRequest) returns(DouYinRelationFriendListResponse);
}